# medi-sheba

./: DEMO_SCRIPT.md  PAYMENT_INTEGRATION_EXAMPLES.md  PAYMENT_INTEGRATION_QUICKSTART.md  PAYMENT_SYSTEM_COMPLETE.md  PAYMENT_SYSTEM_FILE_REFERENCE.md  PAYMENT_SYSTEM_HOSPITAL_SPECIFIC_IMPLEMENTATION.md  PROJECT_DESCRIPTION.md  README.md  START_HERE_PAYMENT_SYSTEM.md  package-lock.json  setup_pharmacy_admin.py  test_api_endpoints.py  test_hospital_payment_system.py  test_payment_validation.py  test_pharmacy.py
medical_sheba/: .env  .env.example  add_missing_columns.py  check_columns.py  check_migrations.py  check_payment_intents.py  check_schema.py  db.sqlite3  fix_payment_intents.py  fix_reference_id.py  pyproject.toml  test_payment_api.py  test_payment_api_client.py  test_payment_serializer.py  test_payment_view.py  verify_complete_schema.py
medical_sheba/apps/ambulance/: admin.py  models.py  serializers.py  urls.py  views.py
medical_sheba/apps/ambulance/migrations/: 0001_initial.py  0002_add_hospital_relationship.py  0003_ambulanceservice_image_url.py  0004_ambulanceservice_requires_authentication.py  0005_ambulancerequest_payment_fields.py  0006_ambulancerequest_user.py  0007_ambulanceservice_admin_user.py  0008_ambulancerequest_distance_km.py  0009_alter_ambulanceservice_district.py
medical_sheba/apps/appointments/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
medical_sheba/apps/appointments/migrations/: 0001_initial.py  0003_make_datetime_optional.py  0004_alter_appointment_appointment_date_and_more.py
medical_sheba/apps/blood/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
medical_sheba/apps/blood/migrations/: 0001_initial.py  0002_blooddonor_contact_phone.py
medical_sheba/apps/contact/: admin.py  models.py  serializers.py  urls.py  views.py
medical_sheba/apps/contact/migrations/: 0001_initial.py
medical_sheba/apps/doctors/: __init__.py  admin.py  models.py  reviews_urls.py  serializers.py  urls.py  views.py
medical_sheba/apps/edoctor/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
medical_sheba/apps/emedicine/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
medical_sheba/apps/hospitals/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
medical_sheba/apps/location/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
medical_sheba/apps/notifications/: admin.py  models.py  serializers.py  urls.py  views.py
medical_sheba/apps/payments/: admin.py  models.py  serializers.py  urls.py  views.py
medical_sheba/apps/search/: admin.py  models.py  serializers.py  urls.py  views.py
medical_sheba/apps/users/: admin.py  models.py  serializers.py  validators.py  views.py
medical_sheba/config/: asgi.py  urls.py  wsgi.py
medical_sheba/config/settings/: base.py  development.py  production.py
medical_sheba/docs/: PAYMENT_SYSTEM.md
medical_sheba/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
medical_sheba/frontend/src/: App.jsx  index.css
medical_sheba/medical_sheba.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+162 files in other folders)
