[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-sheba"
version = "1.0.0"
description = "Professional healthcare management platform for Bangladesh"
requires-python = ">=3.11"

dependencies = [
    # Django & Framework
    "Django==5.1.3",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "django-extensions==3.2.3",
    "django-filter==24.1",
    "drf-spectacular==0.27.0",
    
    # JWT Authentication
    "djangorestframework-simplejwt==5.3.2",
    
    # Database
    "mysqlclient==2.2.0",
    
    # Task Queue
    "celery==5.3.4",
    "redis==5.0.1",
    
    # Payment Gateways
    "requests==2.31.0",
    
    # Firebase
    "firebase-admin==6.2.0",
    
    # File Storage & AWS
    "boto3==1.33.1",
    "django-storages==1.14.2",
    
    # Utilities
    "python-decouple==3.8",
    "Pillow==10.0.1",
    "psycopg2-binary==2.9.9",
    "gunicorn==21.2.0",
    
    # Development
    "django-debug-toolbar==4.2.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "isort==5.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-django==4.7.0",
    "pytest-cov==4.1.0",
    "factory-boy==3.3.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
