[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-sheba"
version = "1.0.0"
description = "Professional healthcare management platform for Bangladesh"
requires-python = ">=3.11"

dependencies = [
    # Django & Framework
    "Django>=4.2,<5.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "django-extensions>=3.2.0",
    "django-filter>=24.1",
    "drf-spectacular>=0.27.0",
    
    # JWT Authentication
    "djangorestframework-simplejwt>=5.3.0",
    
    # Database
    "mysqlclient>=2.2.0",
    
    # Task Queue
    "celery>=5.3.0",
    "redis>=5.0.0",
    
    # Payment Gateways
    "requests>=2.31.0",
    
    # Firebase
    "firebase-admin>=6.2.0",
    
    # File Storage & AWS
    "boto3>=1.33.0",
    "django-storages>=1.14.0",
    
    # Utilities
    "python-decouple>=3.8",
    "Pillow>=10.0.0",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=21.2.0",
    
    # Development
    "django-debug-toolbar>=4.2.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "isort>=5.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
]

[tool.setuptools]
packages = ["apps", "config"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
